--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <p class="subtitle">Undangan Pernikahan</p>
     <h1 class="nama">Rifky & Bela</h1>
-    <p class="date">Sabtu, 20 Juni 2026</p>
+    <p class="date">Kamis, 14 Mei 2026</p>
 
     <a href="#acara" class="btn">Buka Undangan</a>
   </section>
@@ -30,13 +30,13 @@
 
     <div class="box">
       <h3>Akad Nikah</h3>
-      <p>Sabtu, 20 Juni 2026</p>
-      <p>Pukul 09.00 WIB</p>
+      <p>Kamis, 14 Mei 2026</p>
+      <p>Pukul 10.00 WIB</p>
     </div>
 
     <div class="box">
       <h3>Resepsi</h3>
-      <p>Sabtu, 20 Juni 2026</p>
+      <p>Kamis, 14 Mei 2026</p>
       <p>Pukul 11.00 WIB</p>
     </div>
 
@@ -53,3 +53,4 @@
 
 </body>
 </html>
+
