--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="guest">
     <p>Kepada Yth;</p>
     <p>Bapak / Ibu / Saudara / i</p>
-    <h2 id="namaTamu">Darten</h2>
+    <h2 id="namaTamu">Nama Tamu</h2>
   </div>
 
   <!-- BUTTON -->
