--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Wedding Invitation | Rifky & Bela</title>
+  <title>Undangan Pernikahan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="style.css">
@@ -17,11 +17,13 @@
 
   <!-- NAMA PASANGAN -->
   <h1 class="couple">Rifky & Bela</h1>
+
+  <!-- TANGGAL -->
   <p class="date">Kamis, 14 Mei 2026</p>
 
-  <!-- ILUSTRASI -->
+  <!-- ILUSTRASI (GANTI GAMBAR SESUAI ASET KAMU) -->
   <div class="illustration">
-    <img src="assets/rumah.png" alt="Ilustrasi Rumah Adat">
+    <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
   </div>
 
   <!-- TAMU -->
