--- a/index.html
+++ b/index.html
@@ -12,34 +12,28 @@
 
 <section class="opening">
 
-  <!-- ORNAMEN ATAS -->
-  <div class="ornament top"></div>
-
   <!-- NAMA PASANGAN -->
   <h1 class="couple">Rifky & Bela</h1>
 
   <!-- TANGGAL -->
   <p class="date">Kamis, 14 Mei 2026</p>
 
-  <!-- ILUSTRASI (GANTI GAMBAR SESUAI ASET KAMU) -->
+  <!-- ILUSTRASI (GANTI GAMBAR JIKA PERLU) -->
   <div class="illustration">
     <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
   </div>
 
-  <!-- TAMU -->
+  <!-- SAPAAN TAMU -->
   <div class="guest">
-    <p>Kepada Yth;</p>
-    <p>Bapak / Ibu / Saudara / i</p>
+    <p class="greeting">Kepada Yth;</p>
+    <p class="family">Bapak / Ibu / Saudara / i</p>
     <h2 id="namaTamu">Nama Tamu</h2>
   </div>
 
-  <!-- BUTTON -->
+  <!-- TOMBOL -->
   <button class="open-btn" onclick="openInvitation()">
     Open Invitation
   </button>
-
-  <!-- ORNAMEN BAWAH -->
-  <div class="ornament bottom"></div>
 
 </section>
 
