--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+<!-- OPEN GRAPH / THUMBNAIL WA -->
+<meta property="og:title" content="Undangan Pernikahan Rifky & Bela">
+<meta property="og:description" content="Kamis, 14 Mei 2026 — Dengan penuh kebahagiaan kami mengundang Bapak/Ibu/Saudara/i untuk hadir.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://ayanaphon.github.io/wedding/">
+<meta property="og:image" content="https://pixabay.com/id/images/download/wedding-7202466_1920.jpg">
+
+<!-- OPTIONAL (lebih kompatibel) -->
+<meta name="twitter:card" content="summary_large_image">
 
 <section class="opening">
 
@@ -39,3 +48,4 @@
 
 </body>
 </html>
+
