--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:description" content="Kamis, 14 Mei 2026 — Dengan penuh kebahagiaan kami mengundang Bapak/Ibu/Saudara/i untuk hadir.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://ayanaphon.github.io/wedding/">
-<meta property="og:image" content="https://pixabay.com/id/images/download/wedding-7202466_1920.jpg">
+<meta property="og:image" content="https://imgur.com/a/NdwOJRB">
 
 <!-- OPTIONAL (lebih kompatibel) -->
 <meta name="twitter:card" content="summary_large_image">
@@ -48,4 +48,5 @@
 
 </body>
 </html>
+
 
