--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- ILUSTRASI (GANTI GAMBAR JIKA PERLU) -->
   <div class="illustration">
-    <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
+    <img src="https://imgur.com/a/NdwOJRB" alt="Ilustrasi Adat">
   </div>
 
   <!-- SAPAAN TAMU -->
@@ -48,5 +48,6 @@
 
 </body>
 </html>
+
 
 
