--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- ILUSTRASI (GANTI GAMBAR JIKA PERLU) -->
   <div class="illustration">
-     <img src="assets/ilustrasi-adat.png" alt="Ilustrasi Adat Pernikahan">
+     <img src="assets/ilustrasi.png" alt="Ilustrasi Adat Pernikahan">
   </div>
 
   <!-- SAPAAN TAMU -->
@@ -48,6 +48,7 @@
 
 </body>
 </html>
+
 
 
 
