--- a/index.html
+++ b/index.html
@@ -8,35 +8,24 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
-<body>
-<!-- OPEN GRAPH / THUMBNAIL WA -->
-<meta property="og:title" content="Undangan Pernikahan Rifky & Bela">
-<meta property="og:description" content="Kamis, 14 Mei 2026 — Dengan penuh kebahagiaan kami mengundang Bapak/Ibu/Saudara/i untuk hadir.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://ayanaphon.github.io/wedding/">
-<meta property="og:image" content="https://imgur.com/a/NdwOJRB">
-
-<!-- OPTIONAL (lebih kompatibel) -->
-<meta name="twitter:card" content="summary_large_image">
+<body class="locked">
 
 <section class="opening">
 
   <!-- NAMA PASANGAN -->
-  <h1 class="couple">Rifky & Bela</h1>
+  <h1 class="couple animate-right">Rifky & Bela</h1>
+  <p class="date animate-right">Kamis, 14 Mei 2026</p>
 
-  <!-- TANGGAL -->
-  <p class="date">Kamis, 14 Mei 2026</p>
-
-  <!-- ILUSTRASI (GANTI GAMBAR JIKA PERLU) -->
-  <div class="illustration">
-     <img src="assets/ilustrasi.png" alt="Ilustrasi Adat Pernikahan">
+  <!-- ILUSTRASI -->
+  <div class="illustration animate-left">
+    <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
   </div>
 
   <!-- SAPAAN TAMU -->
   <div class="guest">
     <p class="greeting">Kepada Yth;</p>
     <p class="family">Bapak / Ibu / Saudara / i</p>
-    <h2 id="namaTamu">Nama Tamu</h2>
+    <h2 id="namaTamu" class="fade-in">Nama Tamu</h2>
   </div>
 
   <!-- TOMBOL -->
@@ -48,8 +37,3 @@
 
 </body>
 </html>
-
-
-
-
-
