--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body class="locked">
 
 <section class="opening">
+<!-- ORNAMEN BATIK -->
+<img src="assets/batik-left.png" class="ornamen left" alt="Ornamen Batik Kiri">
+<img src="assets/batik-right.png" class="ornamen right" alt="Ornamen Batik Kanan">
 
   <!-- NAMA PASANGAN -->
   <h1 class="couple animate-right">Rifky & Bela</h1>
@@ -37,3 +40,4 @@
 
 </body>
 </html>
+
