--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body class="locked">
 
 <section class="opening">
-<!-- ORNAMEN BATIK -->
-<img src="assets/batik-left.png" class="ornamen left" alt="Ornamen Batik Kiri">
-<img src="assets/batik-right.png" class="ornamen right" alt="Ornamen Batik Kanan">
+
+  <!-- ORNAMEN BATIK PNG -->
+  <img src="assets/batik-left.png" class="ornamen left" alt="Batik Kiri">
+  <img src="assets/batik-right.png" class="ornamen right" alt="Batik Kanan">
 
   <!-- NAMA PASANGAN -->
   <h1 class="couple animate-right">Rifky & Bela</h1>
@@ -26,12 +27,12 @@
 
   <!-- SAPAAN TAMU -->
   <div class="guest">
-    <p class="greeting">Kepada Yth;</p>
-    <p class="family">Bapak / Ibu / Saudara / i</p>
+    <p>Kepada Yth;</p>
+    <p>Bapak / Ibu / Saudara / i</p>
     <h2 id="namaTamu" class="fade-in">Nama Tamu</h2>
   </div>
 
-  <!-- TOMBOL -->
+  <!-- BUTTON -->
   <button class="open-btn" onclick="openInvitation()">
     Open Invitation
   </button>
@@ -40,4 +41,3 @@
 
 </body>
 </html>
-
