--- a/index.html
+++ b/index.html
@@ -12,30 +12,35 @@
 
 <section class="opening">
 
-  <!-- ORNAMEN BATIK PNG -->
-  <img src="assets/batik-left.png" class="ornamen left" alt="Batik Kiri">
-  <img src="assets/batik-right.png" class="ornamen right" alt="Batik Kanan">
+  <!-- ORNAMEN ATAS -->
+  <img src="assets/batik-left.png" class="ornamen left" alt="">
+  <img src="assets/batik-right.png" class="ornamen right" alt="">
 
-  <!-- NAMA PASANGAN -->
-  <h1 class="couple animate-right">Rifky & Bela</h1>
-  <p class="date animate-right">Kamis, 14 Mei 2026</p>
+  <!-- KONTEN -->
+  <div class="content">
 
-  <!-- ILUSTRASI -->
-  <div class="illustration animate-left">
-    <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
+    <h1 class="couple animate-right">Rifky & Bela</h1>
+    <p class="date animate-right">Kamis, 14 Mei 2026</p>
+
+    <div class="illustration animate-left">
+      <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
+    </div>
+
+    <div class="guest">
+      <p>Kepada Yth;</p>
+      <p>Bapak / Ibu / Saudara / i</p>
+      <h2 id="namaTamu" class="fade-in">Nama Tamu</h2>
+    </div>
+
+    <button class="open-btn" onclick="openInvitation()">
+      Open Invitation
+    </button>
+
   </div>
 
-  <!-- SAPAAN TAMU -->
-  <div class="guest">
-    <p>Kepada Yth;</p>
-    <p>Bapak / Ibu / Saudara / i</p>
-    <h2 id="namaTamu" class="fade-in">Nama Tamu</h2>
-  </div>
-
-  <!-- BUTTON -->
-  <button class="open-btn" onclick="openInvitation()">
-    Open Invitation
-  </button>
+  <!-- ORNAMEN BAWAH -->
+  <img src="assets/batik-left.png" class="ornamen bottom-left" alt="">
+  <img src="assets/batik-right.png" class="ornamen bottom-right" alt="">
 
 </section>
 
