--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Undangan Pernikahan Rifky & Bela</title>
+  <title>Undangan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
@@ -12,24 +11,23 @@
 
 <section class="opening">
 
-  <!-- ORNAMEN ATAS -->
+  <!-- ORNAMEN -->
   <img src="assets/batik-left.png" class="ornamen left" alt="">
   <img src="assets/batik-right.png" class="ornamen right" alt="">
 
-  <!-- KONTEN -->
-  <div class="content">
+  <div class="container">
 
-    <h1 class="couple animate-right">Rifky & Bela</h1>
-    <p class="date animate-right">Kamis, 14 Mei 2026</p>
+    <h1 class="couple">Rifky & Bela</h1>
+    <p class="date">Kamis, 14 Mei 2026</p>
 
-    <div class="illustration animate-left">
-      <img src="assets/ilustrasi.png" alt="Ilustrasi Adat">
+    <div class="illustration">
+      <img src="assets/ilustrasi.png" alt="">
     </div>
 
     <div class="guest">
       <p>Kepada Yth;</p>
       <p>Bapak / Ibu / Saudara / i</p>
-      <h2 id="namaTamu" class="fade-in">Nama Tamu</h2>
+      <h2 id="namaTamu">Nama Tamu</h2>
     </div>
 
     <button class="open-btn" onclick="openInvitation()">
@@ -37,10 +35,6 @@
     </button>
 
   </div>
-
-  <!-- ORNAMEN BAWAH -->
-  <img src="assets/batik-left.png" class="ornamen bottom-left" alt="">
-  <img src="assets/batik-right.png" class="ornamen bottom-right" alt="">
 
 </section>
 
