--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <section class="opening">
 
-  <!-- ORNAMEN -->
+  <!-- ORNAMEN ATAS -->
   <img src="assets/batik-left.png" class="ornamen left" alt="">
   <img src="assets/batik-right.png" class="ornamen right" alt="">
 
