--- a/index.html
+++ b/index.html
@@ -7,36 +7,41 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
-<body class="locked">
+<body>
 
-<section class="opening">
+<div class="outer">
 
-  <!-- ORNAMEN ATAS -->
-  <img src="assets/batik-left.png" class="ornamen left" alt="">
-  <img src="assets/batik-right.png" class="ornamen right" alt="">
+  <div class="card">
 
-  <div class="container">
+    <!-- ORNAMEN ATAS -->
+    <img src="assets/frame-left.png" class="frame left" alt="">
+    <img src="assets/frame-right.png" class="frame right" alt="">
 
-    <h1 class="couple">Rifky & Bela</h1>
-    <p class="date">Kamis, 14 Mei 2026</p>
+    <div class="content">
 
-    <div class="illustration">
-      <img src="assets/ilustrasi.png" alt="">
+      <h1 class="couple">Rifky & Bela</h1>
+      <p class="date">Kamis, 14 Mei 2026</p>
+
+      <div class="illustration">
+        <img src="assets/ilustrasi.png" alt="">
+      </div>
+
+      <div class="guest">
+        <p>Kepada Yth;</p>
+        <p>Bapak / Ibu / Saudara / i</p>
+        <h2 id="namaTamu">Nama Tamu</h2>
+      </div>
+
+      <button class="open-btn">Open Invitation</button>
+
     </div>
 
-    <div class="guest">
-      <p>Kepada Yth;</p>
-      <p>Bapak / Ibu / Saudara / i</p>
-      <h2 id="namaTamu">Nama Tamu</h2>
-    </div>
-
-    <button class="open-btn" onclick="openInvitation()">
-      Open Invitation
-    </button>
+    <!-- ORNAMEN BAWAH -->
+    <img src="assets/bottom-ornament.png" class="bottom-ornament" alt="">
 
   </div>
 
-</section>
+</div>
 
 </body>
 </html>
