--- a/index.html
+++ b/index.html
@@ -10,37 +10,26 @@
 <body>
 
 <div class="outer">
-
   <div class="card">
 
-    <!-- ORNAMEN ATAS -->
-    <img src="assets/frame-left.png" class="frame left" alt="">
-    <img src="assets/frame-right.png" class="frame right" alt="">
+    <h1 class="couple fade">Rifky & Bela</h1>
+    <p class="date fade">Kamis, 14 Mei 2026</p>
 
-    <div class="content">
-
-      <h1 class="couple">Rifky & Bela</h1>
-      <p class="date">Kamis, 14 Mei 2026</p>
-
-      <div class="illustration">
-        <img src="assets/ilustrasi.png" alt="">
-      </div>
-
-      <div class="guest">
-        <p>Kepada Yth;</p>
-        <p>Bapak / Ibu / Saudara / i</p>
-        <h2 id="namaTamu">Nama Tamu</h2>
-      </div>
-
-      <button class="open-btn">Open Invitation</button>
-
+    <div class="illustration fade">
+      <img src="assets/ilustrasi.png" alt="">
     </div>
 
-    <!-- ORNAMEN BAWAH -->
-    <img src="assets/bottom-ornament.png" class="bottom-ornament" alt="">
+    <div class="guest fade">
+      <p>Kepada Yth;</p>
+      <p>Bapak / Ibu / Saudara / i</p>
+      <h2 id="namaTamu">Nama Tamu</h2>
+    </div>
+
+    <button class="open-btn fade">
+      Open Invitation
+    </button>
 
   </div>
-
 </div>
 
 </body>
