--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <title>Undangan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
 
 <div class="outer">
   <div class="card">
+
+    <!-- BORDER ANIMATION -->
+    <div class="border-left"></div>
+    <div class="border-right"></div>
 
     <h1 class="couple fade">Rifky & Bela</h1>
     <p class="date fade">Kamis, 14 Mei 2026</p>
