--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 </head>
 <body>
 
+<!-- FRAME KIRI KANAN -->
+<div class="frame-left"></div>
+<div class="frame-right"></div>
+
 <div class="outer">
   <div class="card">
 
-    <!-- BORDER ANIMATION -->
-    <div class="border-left"></div>
-    <div class="border-right"></div>
+    <h1 class="couple">Rifky & Bela</h1>
+    <p class="date">Kamis, 14 Mei 2026</p>
 
-    <h1 class="couple fade">Rifky & Bela</h1>
-    <p class="date fade">Kamis, 14 Mei 2026</p>
-
-    <div class="illustration fade">
+    <div class="illustration">
       <img src="assets/ilustrasi.png" alt="">
     </div>
 
-    <div class="guest fade">
+    <div class="guest">
       <p>Kepada Yth;</p>
       <p>Bapak / Ibu / Saudara / i</p>
       <h2 id="namaTamu">Nama Tamu</h2>
     </div>
 
-    <button class="open-btn fade">
+    <button class="open-btn">
       Open Invitation
     </button>
 
