--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
   <title>Undangan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
 
-<!-- FRAME KIRI KANAN -->
 <div class="frame-left"></div>
 <div class="frame-right"></div>
 
 <div class="outer">
   <div class="card">
 
-    <h1 class="couple">Rifky & Bela</h1>
-    <p class="date">Kamis, 14 Mei 2026</p>
+    <h1 class="couple fade">Rifky & Bela</h1>
+    <p class="date fade">Kamis, 14 Mei 2026</p>
 
-    <div class="illustration">
+    <div class="illustration fade">
       <img src="assets/ilustrasi.png" alt="">
     </div>
 
-    <div class="guest">
+    <div class="guest fade">
       <p>Kepada Yth;</p>
       <p>Bapak / Ibu / Saudara / i</p>
-      <h2 id="namaTamu">Nama Tamu</h2>
+      <h2 id="namaTamu">Tamu Undangan</h2>
     </div>
 
-    <button class="open-btn">
+    <button class="open-btn fade">
       Open Invitation
     </button>
 
