--- a/index.html
+++ b/index.html
@@ -9,30 +9,33 @@
 </head>
 <body>
 
-<div class="frame-left"></div>
-<div class="frame-right"></div>
-
 <div class="outer">
+
   <div class="card">
 
-    <h1 class="couple fade">Rifky & Bela</h1>
-    <p class="date fade">Kamis, 14 Mei 2026</p>
+    <div class="content">
 
-    <div class="illustration fade">
-      <img src="assets/ilustrasi.png" alt="">
+      <h1 class="couple fade">Rifky & Bela</h1>
+      <p class="date fade">Kamis, 14 Mei 2026</p>
+
+      <div class="illustration fade">
+        <img src="assets/ilustrasi.png" alt="">
+      </div>
+
+      <div class="guest fade">
+        <p>Kepada Yth;</p>
+        <p>Bapak / Ibu / Saudara / i</p>
+        <h2 id="namaTamu">Nama Tamu</h2>
+      </div>
+
+      <button class="open-btn fade">
+        Open Invitation
+      </button>
+
     </div>
-
-    <div class="guest fade">
-      <p>Kepada Yth;</p>
-      <p>Bapak / Ibu / Saudara / i</p>
-      <h2 id="namaTamu">Tamu Undangan</h2>
-    </div>
-
-    <button class="open-btn fade">
-      Open Invitation
-    </button>
 
   </div>
+
 </div>
 
 </body>
