--- a/index.html
+++ b/index.html
@@ -9,34 +9,61 @@
 </head>
 <body>
 
-<div class="outer">
+<!-- ================= COVER ================= -->
 
+<div class="outer">
   <div class="card">
 
-    <div class="content">
+    <div class="content fade">
 
-      <h1 class="couple fade">Rifky & Bela</h1>
-      <p class="date fade">Kamis, 14 Mei 2026</p>
+      <h1 class="couple">Rifky & Bela</h1>
+      <p class="date">Kamis, 14 Mei 2026</p>
 
-      <div class="illustration fade">
+      <div class="illustration">
         <img src="assets/ilustrasi.png" alt="">
       </div>
 
-      <div class="guest fade">
+      <div class="guest">
         <p>Kepada Yth;</p>
         <p>Bapak / Ibu / Saudara / i</p>
-        <h2 id="namaTamu">Nama Tamu</h2>
+        <h2 id="namaTamu">Tamu Undangan</h2>
       </div>
 
-      <button class="open-btn fade">
+      <button class="open-btn">
         Open Invitation
       </button>
 
     </div>
 
   </div>
-
 </div>
+
+<!-- ================= HOME SECTION ================= -->
+
+<section class="home" id="homeSection">
+
+  <div class="home-content fade">
+
+    <h2>Rifky & Bela</h2>
+    <p class="home-date">Kamis, 14 Mei 2026</p>
+
+    <div class="divider"></div>
+
+    <div class="event">
+      <h3>Akad Nikah</h3>
+      <p>08.00 WIB</p>
+      <p>Gedung Serbaguna Jakarta</p>
+    </div>
+
+    <div class="event">
+      <h3>Resepsi</h3>
+      <p>11.00 WIB</p>
+      <p>Gedung Serbaguna Jakarta</p>
+    </div>
+
+  </div>
+
+</section>
 
 </body>
 </html>
