--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <!-- ================= COVER ================= -->
 
 <div class="outer">
-  <div class="card">
+  <div class="card" id="coverCard">
 
-    <div class="content fade">
+    <div class="content">
 
       <h1 class="couple">Rifky & Bela</h1>
       <p class="date">Kamis, 14 Mei 2026</p>
@@ -38,12 +38,11 @@
   </div>
 </div>
 
-<!-- ================= HOME SECTION ================= -->
+<!-- ================= HOME ================= -->
 
 <section class="home" id="homeSection">
 
-  <div class="home-content fade">
-
+  <div class="home-content">
     <h2>Rifky & Bela</h2>
     <p class="home-date">Kamis, 14 Mei 2026</p>
 
@@ -60,10 +59,34 @@
       <p>11.00 WIB</p>
       <p>Gedung Serbaguna Jakarta</p>
     </div>
-
   </div>
 
 </section>
+
+<!-- ================= BOTTOM NAV ================= -->
+
+<nav class="bottom-nav" id="bottomNav">
+  <div class="nav-item active">
+    <span>🏠</span>
+    <p>Opening</p>
+  </div>
+  <div class="nav-item">
+    <span>📜</span>
+    <p>Salam</p>
+  </div>
+  <div class="nav-item">
+    <span>💖</span>
+    <p>Bride</p>
+  </div>
+  <div class="nav-item">
+    <span>🤵</span>
+    <p>Groom</p>
+  </div>
+  <div class="nav-item">
+    <span>📅</span>
+    <p>Acara</p>
+  </div>
+</nav>
 
 </body>
 </html>
