--- a/index.html
+++ b/index.html
@@ -9,59 +9,57 @@
 </head>
 <body>
 
-<!-- ================= COVER ================= -->
+<div class="phone-wrapper">
 
-<div class="outer">
-  <div class="card" id="coverCard">
+  <div class="phone-frame">
 
-    <div class="content">
+    <!-- ================= COVER ================= -->
+    <div class="card" id="coverCard">
+      <div class="content">
+        <h1 class="couple">Rifky & Bela</h1>
+        <p class="date">Kamis, 14 Mei 2026</p>
 
-      <h1 class="couple">Rifky & Bela</h1>
-      <p class="date">Kamis, 14 Mei 2026</p>
+        <div class="illustration">
+          <img src="assets/ilustrasi.png" alt="">
+        </div>
 
-      <div class="illustration">
-        <img src="assets/ilustrasi.png" alt="">
+        <div class="guest">
+          <p>Kepada Yth;</p>
+          <p>Bapak / Ibu / Saudara / i</p>
+          <h2 id="namaTamu">Tamu Undangan</h2>
+        </div>
+
+        <button class="open-btn">
+          Open Invitation
+        </button>
       </div>
-
-      <div class="guest">
-        <p>Kepada Yth;</p>
-        <p>Bapak / Ibu / Saudara / i</p>
-        <h2 id="namaTamu">Tamu Undangan</h2>
-      </div>
-
-      <button class="open-btn">
-        Open Invitation
-      </button>
-
     </div>
 
+    <!-- ================= HOME ================= -->
+    <section class="home" id="homeSection">
+      <div class="home-content">
+        <h2>Rifky & Bela</h2>
+        <p class="home-date">Kamis, 14 Mei 2026</p>
+
+        <div class="divider"></div>
+
+        <div class="event">
+          <h3>Akad Nikah</h3>
+          <p>08.00 WIB</p>
+          <p>Gedung Serbaguna Jakarta</p>
+        </div>
+
+        <div class="event">
+          <h3>Resepsi</h3>
+          <p>11.00 WIB</p>
+          <p>Gedung Serbaguna Jakarta</p>
+        </div>
+      </div>
+    </section>
+
   </div>
+
 </div>
-
-<!-- ================= HOME ================= -->
-
-<section class="home" id="homeSection">
-
-  <div class="home-content">
-    <h2>Rifky & Bela</h2>
-    <p class="home-date">Kamis, 14 Mei 2026</p>
-
-    <div class="divider"></div>
-
-    <div class="event">
-      <h3>Akad Nikah</h3>
-      <p>08.00 WIB</p>
-      <p>Gedung Serbaguna Jakarta</p>
-    </div>
-
-    <div class="event">
-      <h3>Resepsi</h3>
-      <p>11.00 WIB</p>
-      <p>Gedung Serbaguna Jakarta</p>
-    </div>
-  </div>
-
-</section>
 
 <!-- ================= BOTTOM NAV ================= -->
 
