--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="guest">
           <p>Kepada Yth;</p>
           <p>Bapak / Ibu / Saudara / i</p>
-          <h2 id="namaTamu">Tamu Undangan</h2>
+          <h2 class="namaTamu">Tamu Undangan</h2>
         </div>
 
         <button class="open-btn">
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
