--- a/index.html
+++ b/index.html
@@ -1,91 +1,58 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <title>Undangan Rifky & Bela</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
-</head>
-<body>
+<div class="phone-frame">
 
-<div class="phone-wrapper">
+  <!-- ================= OPENING ================= -->
+  <div class="card" id="coverCard">
+    <div class="content">
+      <h1 class="couple">Rifky & Bela</h1>
+      <p class="date">Kamis, 14 Mei 2026</p>
 
-  <div class="phone-frame">
-
-    <!-- ================= COVER ================= -->
-    <div class="card" id="coverCard">
-      <div class="content">
-        <h1 class="couple">Rifky & Bela</h1>
-        <p class="date">Kamis, 14 Mei 2026</p>
-
-        <div class="illustration">
-          <img src="assets/ilustrasi.png" alt="">
-        </div>
-
-        <div class="guest">
-          <p>Kepada Yth;</p>
-          <p>Bapak / Ibu / Saudara / i</p>
-          <h2 class="namaTamu">Tamu Undangan</h2>
-        </div>
-
-        <button class="open-btn">
-          Open Invitation
-        </button>
+      <div class="illustration">
+        <img src="assets/ilustrasi.png" alt="">
       </div>
+
+      <div class="guest">
+        <p>Kepada Yth;</p>
+        <p>Bapak / Ibu / Saudara / i</p>
+        <h2 class="namaTamu">Tamu Undangan</h2>
+      </div>
+
+      <button class="open-btn">
+        Open Invitation
+      </button>
+    </div>
+  </div>
+
+  <!-- ================= SALAM ================= -->
+  <section class="screen salam" id="salamSection">
+
+    <div class="oval-box">
+
+      <p class="salam-title">Assalamualaikum Wr.Wb</p>
+
+      <p class="salam-text">
+        Tanpa mengurangi rasa hormat,<br>
+        kami bermaksud mengundang<br>
+        Bapak/Ibu/Saudara/i<br>
+        pada acara resepsi pernikahan:
+      </p>
+
+      <h1 class="nama-besar">
+        Rifky Ardiansyah<br>
+        <span>&</span><br>
+        Bela Wilianti
+      </h1>
+
+      <div class="countdown">
+        <div><strong>00</strong><span>Hari</span></div>
+        <div><strong>00</strong><span>Jam</span></div>
+        <div><strong>00</strong><span>Menit</span></div>
+        <div><strong>00</strong><span>Detik</span></div>
+      </div>
+
+      <button class="btn-calendar">Add to Calendar</button>
+
     </div>
 
-    <!-- ================= HOME ================= -->
-    <section class="home" id="homeSection">
-      <div class="home-content">
-        <h2>Rifky & Bela</h2>
-        <p class="home-date">Kamis, 14 Mei 2026</p>
-
-        <div class="divider"></div>
-
-        <div class="event">
-          <h3>Akad Nikah</h3>
-          <p>08.00 WIB</p>
-          <p>Gedung Serbaguna Jakarta</p>
-        </div>
-
-        <div class="event">
-          <h3>Resepsi</h3>
-          <p>11.00 WIB</p>
-          <p>Gedung Serbaguna Jakarta</p>
-        </div>
-      </div>
-    </section>
-
-  </div>
+  </section>
 
 </div>
-
-<!-- ================= BOTTOM NAV ================= -->
-
-<nav class="bottom-nav" id="bottomNav">
-  <div class="nav-item active">
-    <span>🏠</span>
-    <p>Opening</p>
-  </div>
-  <div class="nav-item">
-    <span>📜</span>
-    <p>Salam</p>
-  </div>
-  <div class="nav-item">
-    <span>💖</span>
-    <p>Bride</p>
-  </div>
-  <div class="nav-item">
-    <span>🤵</span>
-    <p>Groom</p>
-  </div>
-  <div class="nav-item">
-    <span>📅</span>
-    <p>Acara</p>
-  </div>
-</nav>
-
-</body>
-</html>
-
