--- a/index.html
+++ b/index.html
@@ -1,58 +1,76 @@
-<div class="phone-frame">
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Undangan Rifky & Bela</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css?v=3">
+  <script src="script.js?v=3" defer></script>
+</head>
+<body>
 
-  <!-- ================= OPENING ================= -->
-  <div class="card" id="coverCard">
-    <div class="content">
-      <h1 class="couple">Rifky & Bela</h1>
-      <p class="date">Kamis, 14 Mei 2026</p>
+<div class="phone-wrapper">
 
-      <div class="illustration">
-        <img src="assets/ilustrasi.png" alt="">
+  <div class="phone-frame">
+
+    <!-- ================= OPENING ================= -->
+    <div class="card" id="coverCard">
+      <div class="content">
+        <h1 class="couple">Rifky & Bela</h1>
+        <p class="date">Kamis, 14 Mei 2026</p>
+
+        <div class="illustration">
+          <img src="assets/ilustrasi.png" alt="">
+        </div>
+
+        <div class="guest">
+          <p>Kepada Yth;</p>
+          <p>Bapak / Ibu / Saudara / i</p>
+          <h2 class="namaTamu">Tamu Undangan</h2>
+        </div>
+
+        <button class="open-btn">
+          Open Invitation
+        </button>
       </div>
-
-      <div class="guest">
-        <p>Kepada Yth;</p>
-        <p>Bapak / Ibu / Saudara / i</p>
-        <h2 class="namaTamu">Tamu Undangan</h2>
-      </div>
-
-      <button class="open-btn">
-        Open Invitation
-      </button>
     </div>
+
+    <!-- ================= SALAM ================= -->
+    <section class="screen salam" id="salamSection">
+
+      <div class="oval-box">
+
+        <p class="salam-title">Assalamualaikum Wr.Wb</p>
+
+        <p class="salam-text">
+          Tanpa mengurangi rasa hormat,<br>
+          kami bermaksud mengundang<br>
+          Bapak/Ibu/Saudara/i<br>
+          pada acara resepsi pernikahan:
+        </p>
+
+        <h1 class="nama-besar">
+          Rifky Ardiansyah <br>
+          <span>&</span><br>
+          Bela Wilianti
+        </h1>
+
+        <div class="countdown">
+          <div><strong>00</strong><span>Hari</span></div>
+          <div><strong>00</strong><span>Jam</span></div>
+          <div><strong>00</strong><span>Menit</span></div>
+          <div><strong>00</strong><span>Detik</span></div>
+        </div>
+
+        <button class="btn-calendar">Add to Calendar</button>
+
+      </div>
+
+    </section>
+
   </div>
 
-  <!-- ================= SALAM ================= -->
-  <section class="screen salam" id="salamSection">
-
-    <div class="oval-box">
-
-      <p class="salam-title">Assalamualaikum Wr.Wb</p>
-
-      <p class="salam-text">
-        Tanpa mengurangi rasa hormat,<br>
-        kami bermaksud mengundang<br>
-        Bapak/Ibu/Saudara/i<br>
-        pada acara resepsi pernikahan:
-      </p>
-
-      <h1 class="nama-besar">
-        Rifky Ardiansyah<br>
-        <span>&</span><br>
-        Bela Wilianti
-      </h1>
-
-      <div class="countdown">
-        <div><strong>00</strong><span>Hari</span></div>
-        <div><strong>00</strong><span>Jam</span></div>
-        <div><strong>00</strong><span>Menit</span></div>
-        <div><strong>00</strong><span>Detik</span></div>
-      </div>
-
-      <button class="btn-calendar">Add to Calendar</button>
-
-    </div>
-
-  </section>
-
 </div>
+
+</body>
+</html>
