--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Undangan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css?v=3">
-  <script src="script.js?v=3" defer></script>
+  <link rel="stylesheet" href="style.css?v=4">
+  <script src="script.js?v=4" defer></script>
 </head>
 <body>
 
@@ -71,6 +71,31 @@
   </div>
 
 </div>
+
+<!-- ================= BOTTOM NAV ================= -->
+
+<nav class="bottom-nav" id="bottomNav">
+  <div class="nav-item active">
+    <span>🏠</span>
+    <p>Opening</p>
+  </div>
+  <div class="nav-item">
+    <span>📜</span>
+    <p>Salam</p>
+  </div>
+  <div class="nav-item">
+    <span>💖</span>
+    <p>Bride</p>
+  </div>
+  <div class="nav-item">
+    <span>🤵</span>
+    <p>Groom</p>
+  </div>
+  <div class="nav-item">
+    <span>📅</span>
+    <p>Acara</p>
+  </div>
+</nav>
 
 </body>
 </html>
