--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <title>Undangan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css?v=4">
-  <script src="script.js?v=4" defer></script>
+  <link rel="stylesheet" href="style.css?v=5">
+  <script src="script.js?v=5" defer></script>
 </head>
 <body>
 
 <div class="phone-wrapper">
-
   <div class="phone-frame">
 
     <!-- ================= OPENING ================= -->
@@ -29,13 +28,11 @@
           <h2 class="namaTamu">Tamu Undangan</h2>
         </div>
 
-        <button class="open-btn">
-          Open Invitation
-        </button>
+        <button class="open-btn">Open Invitation</button>
       </div>
     </div>
 
-    <!-- ================= SALAM ================= -->
+    <!-- ================= TAB SALAM ================= -->
     <section class="screen salam" id="salamSection">
 
       <div class="oval-box">
@@ -69,7 +66,6 @@
     </section>
 
   </div>
-
 </div>
 
 <!-- ================= BOTTOM NAV ================= -->
