--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Undangan Rifky & Bela</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css?v=7">
-  <script src="script.js?v=7" defer></script>
+  <link rel="stylesheet" href="style.css?v=10">
+  <script src="script.js?v=10" defer></script>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
       </div>
     </div>
 
-    <!-- ================= TAB SALAM ================= -->
+    <!-- ================= SALAM ================= -->
     <section class="screen salam" id="salamSection">
 
       <div class="oval-box">
@@ -65,33 +65,32 @@
 
     </section>
 
+    <!-- ================= BOTTOM NAV (DI DALAM FRAME) ================= -->
+    <nav class="bottom-nav hidden" id="bottomNav">
+      <div class="nav-item active">
+        <span>🏠</span>
+        <p>Opening</p>
+      </div>
+      <div class="nav-item">
+        <span>📜</span>
+        <p>Salam</p>
+      </div>
+      <div class="nav-item">
+        <span>💖</span>
+        <p>Bride</p>
+      </div>
+      <div class="nav-item">
+        <span>🤵</span>
+        <p>Groom</p>
+      </div>
+      <div class="nav-item">
+        <span>📅</span>
+        <p>Acara</p>
+      </div>
+    </nav>
+
   </div>
 </div>
-
-<!-- ================= BOTTOM NAV ================= -->
-
-<nav class="bottom-nav" id="bottomNav">
-  <div class="nav-item active">
-    <span>🏠</span>
-    <p>Opening</p>
-  </div>
-  <div class="nav-item">
-    <span>📜</span>
-    <p>Salam</p>
-  </div>
-  <div class="nav-item">
-    <span>💖</span>
-    <p>Bride</p>
-  </div>
-  <div class="nav-item">
-    <span>🤵</span>
-    <p>Groom</p>
-  </div>
-  <div class="nav-item">
-    <span>📅</span>
-    <p>Acara</p>
-  </div>
-</nav>
 
 </body>
 </html>
